--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <body>
     <header>
       <nav class="container">
-        <div class="logo">myTunes</div>
+        <div class="logo">
+            <img src="My(2).jpg" alt="my tunes" width="120px" /></div>
         <ul>
           <a href="#hero">
             <li>Overview</li>
@@ -87,12 +88,18 @@
         <div class="container">
           <h3>A world of entertainment. Available wherever you are.</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
-            veniam nobis, nisi ut expedita, doloribus reprehenderit explicabo
-            non velit repellat alias saepe inventore repellendus? Molestias
-            suscipit eos tempora? Quae quaerat cumque in veritatis impedit
-            dolorum sapiente recusandae minima quo aperiam quam, excepturi quasi
-            totam ad quas? Ipsam laudantium soluta delectus!
+            In today’s fast-paced world, entertainment is just a click away,
+            available anytime and anywhere. Whether you're at home, commuting,
+            or on vacation, you can access an endless variety of movies, TV 
+            shows, music, and live events right at your fingertips. Our 
+            platform brings you a world of entertainment tailored to your 
+            preferences, offering everything from the latest blockbusters to 
+            timeless classics. With seamless streaming across devices, you never
+            have to miss a moment of your favorite content. Wherever you go, 
+            the fun follows—ensuring you're always connected to the best 
+            entertainment experience, whenever and wherever you need it. 
+            Join us and explore a world of limitless possibilities, all in 
+            the palm of your hand.
           </p>
         </div>
       </section>
@@ -104,12 +111,12 @@
           <div class="gift-content">
             <h3>Gift Card</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt
-              cum explicabo, excepturi eaque commodi minima quas repellendus
-              assumenda facere hic, earum quasi iste asperiores molestiae
-              obcaecati laborum, voluptatum alias velit cupiditate! Quae soluta
-              sapiente quasi, iusto quam magnam doloribus natus quod eius, rerum
-              asperiores aspernatur. Illum neque sequi odit fuga.
+                our gift cards offer a flexible and convenient solution. 
+                Simply choose the amount, and the recipient can redeem it online or 
+                in-store, enjoying a wide range of products and services. It's a 
+                thoughtful, easy-to-give present that ensures they get something 
+                they'll truly love.
+                 Give the gift of choice today with our hassle-free gift cards!
             </p>
             <p>Already have an Orange MyTunes Music Gift Card?</p>
             <hr />
